--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "anixNewYearJS",
   "version": "1.0.0",
   "description": "",
+  "dependencies": {
+    "express": "^4.20.0"
+  },
+
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
